--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,10 +16,10 @@ jobs:
       - run: pip install -r requirements.txt
       - run: pytest
       - name: SonarQube Scan
-        uses: sonarsource/sonarqube-scan-action@v1
+        uses: sonarsource/sonarcloud-github-action@v1
+        with:
+          organization: Alkerg  
+          projectKey: Alkerg_Prueba_entrada_CC3S2          
+          projectName: Trivia Game Python
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        with:
-          args: > 
-            -Dsonar.projectKey=trivia-game-python 
-            -Dsonar.sources=.
