--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,11 @@ jobs:
           python-version: '3.9'
       - run: pip install -r requirements.txt
       - run: pytest
+      - name: Set up Java 17
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'
+          java-version: '17'
       - name: SonarQube Scan
         uses: sonarsource/sonarcloud-github-action@v1
         env:
