--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '3.8'
 
 services:
   db:
@@ -8,7 +7,7 @@ services:
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: mydatabase
+      POSTGRES_DB: trivia_db
     ports:
       - "5432:5432"
     volumes:
@@ -22,7 +21,7 @@ services:
     ports:
       - "8000:8000"
     environment:
-      DATABASE_URL: postgres://postgres:postgres@db:5432/mydatabase
+      DATABASE_URL: postgres://postgres:postgres@db:5432/trivia_db
     volumes:
       - .:/app
     command: ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
